@@ -1,9 +1,8 @@
 package ru.job4j.list;
 
-import org.junit.Test;
 import static org.junit.Assert.assertThat;
 import static org.hamcrest.core.Is.is;
-import java.util.Arrays;
+import org.junit.Test;
 import java.util.List;
 /**
  * Test
@@ -22,9 +21,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
@@ -35,7 +32,7 @@ public class ConvertMatrix2ListTest {
     public void whenEmptyOn2ArrayThenEmptyList() {
         ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {{}, {}};
-        List<Integer> expect = Arrays.asList();
+        List<Integer> expect = List.of();
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
